feat: add article of data mesh

--- a/data/blog/big-data.mdx
+++ b/data/blog/big-data.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Big Data: Concepts, Architecture, and Technologies'
-date: '2025-07-05'
+date: '2025-07-03'
 tags: ['Big Data', 'Hadoop', 'Kafka', 'Spark', 'Data Engineering', 'Data Warehouse']
 draft: false
 summary: 'This article explores the world of Big Data, covering core concepts like the 4Vs (Volume, Velocity, Variety, Veracity), key technologies including Hadoop, Kafka, and Spark, and modern architectures such as Persistent Staging Areas and real-time processing systems. It provides a comprehensive overview of the technologies that emerged to address the challenges of modern data growth beyond traditional database capabilities.'
@@ -197,7 +197,7 @@ Spark introduces the concept of Resilient Distributed Datasets (RDDs)—immutabl
 - Scheduling, distributing, and monitoring jobs on a cluster
 - Interacting with storage systems
 
-![Spark Core](/static/images/resource/big-data/06SparkCore.png.png)
+![Spark Core](/static/images/resource/big-data/06SparkCore.png)
 
 Other components include:
 
