chore: modify publish date

--- a/data/blog/dimensional-modeling-four-step.mdx
+++ b/data/blog/dimensional-modeling-four-step.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Dimensional Modeling - Four-Step Design Process'
-date: '2025-07-02'
+title: 'Dimensional Modeling - Part 0: 4-Step Design Process'
+date: '2025-07-01'
 tags: ['Data Warehouse', 'Dimensional Modeling', 'Database']
 draft: false
 summary: 'This article outlines a structured approach to Data Design, detailing essential steps for creating effective data models that align with business needs. It covers gathering business requirements, conducting collaborative workshops, and following the Four-Step Dimensional Design Process. The article also features a use case for modeling data in a Fast Food outlet and discusses managing changes in dimension data using Slowly Changing Dimensions (SCDs).'
